@@ -2,6 +2,7 @@
 
 	* Add example function for importing images in base64 format, resolves #145
 	* Add missing renderType information to log table (thanks to Mathias Brodala)
+	* Allow parameters to be passed to custom steps, resolves #130
 
 2020-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>
 
